# SquadOVApiServer

./: .clocignore  .gitattributes  .gitignore  .sops.yaml  Cargo.toml  DOCKER_BUILD.md  Dockerfile  Dockerfile.csgodemo  Dockerfile.devapi  Dockerfile.discord  Dockerfile.essync  Dockerfile.event  Dockerfile.ff14  Dockerfile.parser  Dockerfile.reports  Dockerfile.rmqdelay  Dockerfile.vod  Dockerfile.wcltransfer  Dockerfile.wowkafka  cloc.sh  deps.txt  run_api_server.sh  run_csgo_demo_handler.sh  run_devapi.sh  run_discord.sh  run_es_sync.sh  run_rabbitmq_delay_handler.sh  run_singleton_event_proces.sh  run_singleton_event_process.sh  run_vod_process.sh  run_wow_combat_log_transfer_worker.sh  run_wow_kafkaworker.sh  sqlx-data.json
lambda/ff14_combat_log_parser/: Cargo.toml  sqlx-data.json
lambda/ff14_combat_log_parser/src/: main.rs
lib/squadov_common/: Cargo.toml  build.rs  sqlx-data.json
lib/squadov_common/src/: access.rs  accounts.rs  aimlab.rs  analytics.rs  aws.rs  blob.rs  combatlog.rs  community.rs  config.rs  crypto.rs  csgo.rs  discord.rs  elastic.rs  email.rs  encrypt.rs  error.rs  ff14.rs  games.rs  gcp.rs  hal.rs  hardware.rs  hearthstone.rs  http.rs  image.rs  ipstack.rs  job.rs  kafka.rs  lib.rs  matches.rs  math.rs  oauth.rs  parse.rs  profile.rs  rabbitmq.rs  redis.rs  riot.rs  segment.rs  session.rs  share.rs  sql.rs  (+12 more)
lib/squadov_common/src/accounts/: twitch.rs
lib/squadov_common/src/analytics/: active.rs
lib/squadov_common/src/aws/: s3.rs
lib/squadov_common/src/blob/: aws.rs  gcp.rs
lib/squadov_common/src/combatlog/: agg.rs  db.rs  interface.rs  io.rs
lib/squadov_common/src/combatlog/agg/: sliding_window.rs
lib/squadov_common/src/combatlog/io/: avro.rs  json.rs
lib/squadov_common/src/community/: db.rs  invites.rs  roles.rs
lib/squadov_common/src/csgo/: data_table.rs  db.rs  demo.rs  entity.rs  gsi.rs  math.rs  parser.rs  prop.rs  prop_types.rs  rabbitmq.rs  schema.rs  summary.rs  weapon.rs
lib/squadov_common/src/discord/: api.rs  bot.rs  db.rs  oauth.rs  rabbitmq.rs
lib/squadov_common/src/elastic/: rabbitmq.rs  vod.rs
lib/squadov_common/src/encode/: url.rs
lib/squadov_common/src/ff14/: combatlog.rs  reports.rs
lib/squadov_common/src/ff14/reports/: death.rs  limit_break.rs
lib/squadov_common/src/gcp/: gcs.rs
lib/squadov_common/src/gcp/gcs/: bucket.rs  object.rs  signed_url.rs
lib/squadov_common/src/hearthstone/: db.rs  format_type.rs  game_packet.rs  game_state.rs  game_type.rs  power_parser.rs
lib/squadov_common/src/hearthstone/game_state/: game_entity.rs  game_step.rs  play_state.rs  player_entity.rs
lib/squadov_common/src/hearthstone/power_parser/: power_fsm.rs
lib/squadov_common/src/parse/: bit_reader.rs
lib/squadov_common/src/profile/: access.rs  data.rs
lib/squadov_common/src/proto/csgo/: cstrike15_gcmessages.proto  cstrike15_usermessages.proto  engine_gcmessages.proto  netmessages.proto  steammessages.proto
lib/squadov_common/src/proto/hearthstone/: game_state.proto
lib/squadov_common/src/riot/: api.rs  db.rs  games.rs  rso.rs
lib/squadov_common/src/riot/api/: account.rs  lol.rs  summoner.rs  tft.rs  valorant.rs
lib/squadov_common/src/riot/db/: account.rs  lol.rs  shard.rs  (+3 more)
lib/squadov_common/src/share/: auto.rs  rabbitmq.rs
lib/squadov_common/src/speed_check/: manager.rs
lib/squadov_common/src/sql/: builder.rs  format.rs
lib/squadov_common/src/squad/: links.rs  status.rs
lib/squadov_common/src/steam/: api.rs  db.rs  rabbitmq.rs
lib/squadov_common/src/stripe/: checkout.rs  coupon.rs  currency.rs  customer.rs  customer_portal.rs  invoice.rs  price.rs  product.rs  subscription.rs  webhook.rs
lib/squadov_common/src/twitch/: api.rs  eventsub.rs  oauth.rs  rabbitmq.rs
lib/squadov_common/src/vod/: clip.rs  db.rs  fastify.rs  manager.rs  preview.rs
lib/squadov_common/src/words/: adjectives.rs  nouns.rs  verbs.rs
lib/squadov_common/src/wow/: characters.rs  combatant.rs  combatlog.rs  constants.rs  death_recap.rs  matches.rs  reports.rs  rmq.rs  serialized.rs
msa/devapi/: Cargo.toml  sqlx-data.json
msa/devapi/openapi/: devapi.yml
msa/devapi/src/: auth.rs  main.rs  openapi.rs  shared.rs
msa/devapi/src/auth/: api.rs  oauth.rs
msa/devapi/ui/dashboard/: doc.html
msa/devapi/ui/landing/: index.html
msa/elasticsearch_sync/: Cargo.toml
msa/elasticsearch_sync/src/: main.rs
msa/rabbitmq_delay_handler/: Cargo.toml  sqlx-data.json
msa/rabbitmq_delay_handler/src/: main.rs
msa/wow_combatlog_handler/: Cargo.toml
msa/wow_combatlog_handler/src/: main.rs
server/: Cargo.toml  generate_sqlx.py  singleton_event_processing_worker.json  sqlx-data.json  squadov_api_server.json  vod_processing_worker.json  wow_combat_log_transfer_worker.json  wow_kafka_worker.json
server/src/: api.rs  main.rs  singleton_event_processing_worker.rs  vod_processing_worker.rs  wow_combat_log_transfer_worker.rs  wow_kafka.rs  wow_kafka_worker.rs
server/src/api/: access.rs  admin.rs  api_service.rs  auth.rs  fusionauth.rs  graphql.rs  meta.rs  oembed.rs  v1.rs
server/src/api/access/: aimlab.rs  community.rs  csgo.rs  hearthstone.rs  matches.rs  null.rs  riot.rs  riot_access.rs  share.rs  squad.rs  squad_access.rs  squad_invite.rs  squad_invite_access.rs  token.rs  user_specific.rs  user_specific_access.rs  vod.rs  wow.rs
server/src/api/admin/: analytics.rs
server/src/api/auth/: forgot_password.rs  login.rs  logout.rs  mfa.rs  register.rs  session.rs  user.rs  verify_email.rs
server/src/api/fusionauth/: jwt.rs  login.rs  mfa.rs  register.rs  user.rs
server/src/api/graphql/: stats.rs
server/src/api/v1/: aimlab.rs  analytics.rs  aws.rs  bug.rs  combat_log.rs  community.rs  csgo.rs  discord.rs  features.rs  hearthstone.rs  kafka.rs  lol.rs  matches.rs  oauth.rs  profile.rs  sentry.rs  share.rs  speed_check.rs  squad.rs  stripe.rs  subscription.rs  tft.rs  twitch.rs  user.rs  util.rs  valorant.rs  vod.rs  wow.rs
tools/hearthstone_power_parser/: Cargo.toml
tools/hearthstone_power_parser/src/: main.rs
tools/wow_match_view_data_backfill/: Cargo.toml
tools/wow_match_view_data_backfill/src/: main.rs
(+1140 files in other folders)
