[workspace]
members = [
    "server",
    "lib/squadov_common",
    "tools/hearthstone_power_parser",
    "tools/csgo_demo_parser",
    "tools/wow_match_transfer",
    "msa/rabbitmq_delay_handler",
    "msa/csgo_demo_handler"
]
default-members = [
    "server",
    "lib/squadov_common",
    "tools/hearthstone_power_parser",
    "tools/csgo_demo_parser",
    "tools/wow_match_transfer",
    "msa/rabbitmq_delay_handler",
    "msa/csgo_demo_handler"
]
exclude = ["deps/cargo/rust-petname", "deps/cargo/sqlx"]