[workspace]
members = [
    "server",
    "lib/squadov_common",
    "tools/hearthstone_power_parser",
    "tools/csgo_demo_parser",
    "tools/wow_match_transfer",
    "tools/wow_match_view_data_backfill",
    "msa/rabbitmq_delay_handler",
    "msa/csgo_demo_handler",
    "msa/devapi"
]
default-members = [
    "server",
    "lib/squadov_common",
    "tools/hearthstone_power_parser",
    "tools/csgo_demo_parser",
    "tools/wow_match_transfer",
    "tools/wow_match_view_data_backfill",
    "msa/rabbitmq_delay_handler",
    "msa/csgo_demo_handler",
    "msa/devapi"
]
exclude = ["deps/cargo/rust-petname", "deps/cargo/sqlx"]