[workspace]
members = [
    "server",
    "lib/squadov_common",
    "tools/hearthstone_power_parser",
    "tools/csgo_demo_parser",
    "tools/wow_match_transfer",
    "tools/wow_match_view_data_backfill",
    "msa/rabbitmq_delay_handler",
    "msa/csgo_demo_handler",
    "msa/devapi",
    "msa/elasticsearch_sync",
    "lambda/ff14_combat_log_parser",
    "lambda/combat_log_report_generator"
]
default-members = [
    "server",
    "lib/squadov_common",
    "tools/hearthstone_power_parser",
    "tools/csgo_demo_parser",
    "tools/wow_match_transfer",
    "tools/wow_match_view_data_backfill",
    "msa/rabbitmq_delay_handler",
    "msa/csgo_demo_handler",
    "msa/devapi",
    "msa/elasticsearch_sync",
    "lambda/ff14_combat_log_parser",
    "lambda/combat_log_report_generator"
]
exclude = ["deps/cargo/rust-petname", "deps/cargo/sqlx"]