[package]
name = "squadov_api_server"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-multipart = "0.4.0"
actix-rt = "2.7.0"
actix-cors = "0.6.1"
actix-service = "2.0.2"
actix-web-actors = "4.1.0"
async-trait = "0.1.41"
async-std = "1.7.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.7.1"
derive_more = "0.99.11"
reqwest = { version = "0.11.9", features = ["json", "multipart"] }
tokio = { version = "1.15.0", features = ["full"] }
toml = "0.5"
structopt = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
sqlx = { version = "0.5.10", default-features = false, features = [ "bigdecimal", "runtime-async-std-native-tls", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
futures = "0.3.13"
futures-util = "0.3.13"
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.1.1"
base64 = "0.13.0"
jsonwebtoken = "7.2.0"
sha2 = "0.9.1"
hex = "0.4.2"
openssl = "0.10"
openssl-sys = "0.9.58"
percent-encoding = "2.1.0"
juniper = { version = "0.15.3", features = ["scalar-naivetime"]}
ipnetwork = { version = "0.17.0", features = ["serde"] }
squadov_common = { path="../lib/squadov_common" }
flate2 = "1.0"
bytes = "0.6.0"
prost = "0.7.0"
tempfile = "3.1.0"
rand = "0.8.0"
rdkafka = { version = "0.28.0", features = ["cmake-build", "ssl", "libz-static", "zstd"] }
num_enum = "0.5.1"
lru = "0.6.5"
harsh = "0.2.1"
hmac = "0.11.0"
petname = { path="../deps/cargo/rust-petname", version = "1.1.0" }
convert_case = "0.4.0"
rusoto_cognito_identity = "0.47.0"
deadpool = "0.9.2"
deadpool-redis = "0.10.2"
redis = "0.21.5"
elasticsearch-dsl = "0.3.7"

[features]
eventloop = []

[[bin]]
name = "squadov_api_server"
path = "src/main.rs"

[[bin]]
name = "wow_kafka_worker"
path = "src/wow_kafka_worker.rs"

[[bin]]
name = "vod_processing_worker"
path = "src/vod_processing_worker.rs"

[[bin]]
name = "singleton_event_processing_worker"
path = "src/singleton_event_processing_worker.rs"
required-features = ["eventloop"]