[package]
name = "ff14_combat_log_parser"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
sqlx = { path="../../deps/cargo/sqlx", version = "0.4.0-beta.1", default-features = false, features = [ "bigdecimal", "runtime-async-std", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
squadov_common = { path="../../lib/squadov_common" }
log = "0.4.0"
env_logger = "0.7.1"
rusoto_core = "0.45.0"
rusoto_secretsmanager = "0.45.0"