[package]
name = "squadov_common"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
actix-web = "3.1.0"
actix-multipart = "0.3.0"
async-trait = "0.1.41"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1.1"
openssl = "0.10"
openssl-sys = "0.9.58"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
percent-encoding = "2.1.0"
sqlx = { path="../../deps/cargo/sqlx", version = "0.4.0-beta.1", default-features = false, features = [ "bigdecimal", "runtime-async-std", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
ipnetwork = { version = "0.17.0", features = ["serde"] }
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "cd66bdb", features = ["scalar-naivetime"]}
hex = "0.4.2"
base64 = "0.13.0"
sha2 = "0.9.1"
log = "0.4.11"
lazy_static = "1.4.0"
regex = "1.4.2"
serde_repr = "0.1.6"
num_enum = "0.5.1"
crc32c = "0.5.0"
md5 = "0.7.0"
byteorder = "1.3.4"
brotli2 = "0.3"
rand = "0.7.3"
async-std = "1.7.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
prost = "0.6.1"
crossbeam = "0.8.0"

[build-dependencies]
prost-build = "0.6.1"