[package]
name = "squadov_common"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-multipart = "0.4.0"
actix-web-actors = "4.1.0"
async-trait = "0.1.41"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1.1"
openssl = "0.10"
openssl-sys = "0.9.58"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
serde_with = "1.6.4"
percent-encoding = "2.1.0"
sqlx = { version = "0.5.10", default-features = false, features = [ "bigdecimal", "runtime-async-std-native-tls", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
ipnetwork = { version = "0.17.0", features = ["serde"] }
juniper = { version = "0.15.2", features = ["scalar-naivetime"]}
hex = "0.4.2"
base64 = "0.13.0"
sha2 = "0.10.2"
log = "0.4.11"
lazy_static = "1.4.0"
regex = "1.4.2"
serde_repr = "0.1.6"
num_enum = "0.5.1"
crc32c = "0.5.0"
md-5 = "0.9.1"
byteorder = "1.3.4"
brotli = "3.3.3"
rand = "0.8.0"
async-std = "1.7.0"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
futures = "0.3.8"
futures-util = "0.3.8"
prost = "0.7.0"
crossbeam = "0.8.0"
bytes = "0.6.0"
rdkafka = { version = "0.28.0", features = ["cmake-build", "ssl", "libz-static", "zstd"] }
chashmap = { git = "https://gitlab.redox-os.org/redox-os/chashmap.git" }
unicode-segmentation = "1.7.1"
env_logger = "0.7.1"
lapin = "2.0.0-beta.3"
tempfile = "3.1.0"
nom = "7.1.0"
funty = "=1.1.0"
bitvec = "0.19.4"
bzip2 = "0.4"
convert_case = "0.4.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rusoto_credential = "0.47.0"
rusoto_cognito_identity = "0.47.0"
rusoto_signature = "0.47.0"
image = "0.23.14"
harsh = "0.2.1"
petname = { path="../../deps/cargo/rust-petname", version = "1.1.0" }
rsa = "0.5.0"
sha-1 = "0.9.7"
hmac = "0.12.1"
deadpool = "0.9.2"
deadpool-redis = "0.10.2"
redis = "0.21.5"
avro-rs = { version = "0.13.0", features = ["snappy"] }
num = "0.4.0"
itertools = "0.10.3"
elasticsearch-dsl = "0.3.7"
serenity = "0.11.2"
hkdf = "0.12.3"

[build-dependencies]
prost-build = "0.7.0"