[package]
name = "elasticsearch_sync"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.9.0"
config = "0.13.1"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.10", default-features = false, features = [ "bigdecimal", "runtime-async-std-native-tls", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
log = "0.4.0"
serde_json = "1.0.79"
squadov_common = { path="../../lib/squadov_common" }
async-std = "1.7.0"