[package]
name = "hearthstone_power_parser"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
structopt = "0.3"
squadov_common = { path="../../lib/squadov_common" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"

env_logger = "0.8.1"