[package]
name = "wow_match_view_data_backfill"
version = "0.1.0"
authors = ["GRCHive, Inc. <mike@squadov.gg>"]
edition = "2018"

[dependencies]
squadov_common = { path="../../lib/squadov_common" }
sqlx = { version = "0.5.10", default-features = false, features = [ "bigdecimal", "runtime-async-std-native-tls", "macros", "postgres", "json", "ipnetwork", "uuid", "chrono", "offline"] }
log = "0.4.0"
env_logger = "0.7.1"
structopt = "0.3"
tokio = { version = "1.15.0", features = ["full"] }
toml = "0.5"
serde = { version = "1.0.116", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
async-std = "1.7.0"
serde_json = "1.0.59"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.41"